--- a/jstoolchain/package.json
+++ b/jstoolchain/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^3.3.1",
     "tailwindcss": "^3.3.3"
