--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.4
 django-browser-reload==1.11.0
 django-cleanup==8.0.0
 django-email-blacklist==1.0.1
+django-mathfilters==1.0.0
 Pillow==10.0.0
 sorl-thumbnail==12.9.0
 sqlparse==0.4.4
