--- a/jstoolchain/package.json
+++ b/jstoolchain/package.json
@@ -17,5 +17,8 @@
     "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^3.3.1",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "aos": "^2.3.4"
   }
 }
