--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ Pillow==10.0.0
 sorl-thumbnail==12.9.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
+python-dotenv==1.0.0
+psycopg2==2.9.7
+dj-database-url==2.1.0
+gunicorn==21.0.1
