--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ jstoolchain/node_modules
 jstoolchain/package-lock.json
 static/
 
+output.css
+
 .DS_Store
 accounts/templates/accounts/account_copy.html
 
