--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,8 @@ db.sqlite3-journal
 media/
 jstoolchain/node_modules
 jstoolchain/package-lock.json
-static/
 
-output.css
+staticfiles/
 
 .DS_Store
 accounts/templates/accounts/account_copy.html
