--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,13 @@ db.sqlite3-journal
 
 **/__pycache__/
 **/migrations/__pycache__/
-media/
+
+media/profile_pictures/*
+media/albums
+media/cache
+media/images
+!media/profile_pictures/default.jpg
+
 jstoolchain/node_modules
 jstoolchain/package-lock.json
 
