--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ staticfiles/
 .DS_Store
 accounts/templates/accounts/account_copy.html
 
+venv/
+
 # Byte-compiled / optimized / DLL files
 *.py[cod]
 *$py.class
