--- a/jstoolchain/package.json
+++ b/jstoolchain/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "dropzone": "^6.0.0-beta.2"
   }
 }
