--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ accounts/templates/accounts/account_copy.html
 
 venv/
 
+sync_and_run.sh
+
 # Byte-compiled / optimized / DLL files
 *.py[cod]
 *$py.class
