--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,10 @@ accounts/templates/accounts/account_copy.html
 
 venv/
 
-*.sh
+sync_and_run.sh
+fake_data_test.sh
+fake_data_creation.sh
+fake_data_deletion.sh
 
 # Byte-compiled / optimized / DLL files
 *.py[cod]
