--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dokku": {
-      "predeploy": "npm run tailwind-build"
+      "predeploy": "cd jstoolchain && npm run tailwind-build"
     }
   }
 }
