local scripts to exec before and after git push

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ venv/
 
 sync_and_run.sh
 fake_data_test.sh
-fake_data_remote.sh
+
+local_postdeploy.sh
+local_predeploy.sh
 
 # Byte-compiled / optimized / DLL files
 *.py[cod]
